--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body,
 html {
   height: 100%;
   margin: 0;
+  font-family: sans-serif;
 }
 
 .grid {
@@ -14,7 +15,6 @@ html {
 .grid div {
   padding: 15px;
   font-size: 32px;
-  font-family: Helvetica;
   font-weight: bold;
   color: white;
   border-radius: 15px;
@@ -42,15 +42,14 @@ html {
 
 .article p {
   font-size: 18px;
-  font-family: sans-serif;
   color: white;
   text-align: left;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 300px 900px;
-  grid-template-rows: 100px 100px 500px 100px;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
   gap: 15px;
 }
 
